Fixed divider adjustment regarding credit given
In the produce and chat section, i made it more consistent by giving it space at the bottom.
This due to credit eating some space, and if not doing so , something would look off.

This is not per design given. so are deviating abit here.

--- a/css/Global.css
+++ b/css/Global.css
@@ -120,9 +120,14 @@ main {
   padding-top: 90px;
 }
 
-/* Margin top 45 px set as important, due to something overwriting it.*/
+/* Margin top 45px set as important, due to something overwriting it.*/
 .margin-top-45 {
   margin-top: 45px !important;
+}
+
+/* Margin top 90px set as important, due to something overwriting it.*/
+.margin-bottom-90 {
+  margin-bottom: 90px !important;
 }
 
 .object-fit-cover {
